--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build-css": "tailwindcss build style.css -o css/style.css",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-bootstrap": "^0.32.30",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
@@ -18,6 +21,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
